--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "com.unity.services.leaderboards": "2.0.0",
     "com.unity.services.authentication": "3.1.0",
-    "com.connor.string-helper": "1.0.0"
+    "com.connor.string-helper": "https://github.com/Connor-J-deBoer/StringHelpers.git"
   },
   "samples": []
 }
