--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "unity": "2022.3",
   "dependencies": {
     "com.unity.services.leaderboards": "2.0.0",
-    "com.unity.services.authentication": "3.1.0",
-    "com.connor.string-helper": "https://github.com/Connor-J-deBoer/StringHelpers.git"
+    "com.unity.services.authentication": "3.1.0"
   },
   "samples": []
 }
